feat: 이메일 찾기 구현, 휴대폰 중복체크 구현, 닉네임 중복체크 수정 및 로그 주석화, 에러메시지 일부 수정